# moderncpp_study

./: CMakeLists.txt  README.md
src/: main.cpp  rvo_test.cpp
src/lambda_expressions/: anonymous_function_with_lambda_expression.cpp  lambda_expression.cpp  sorting_with_lambda_expressions.cpp
src/stl_examples/: std_accumulation.cpp  std_accumulation_w_struct.cpp  std_copy_if.cpp  std_copy_if_with_set.cpp  std_find_if.cpp  std_find_if_w_struct.cpp  std_for_each.cpp  std_insert_for_elements.cpp  std_insert_for_set.cpp  std_insert_for_vector.cpp  std_move.cpp  std_move_example.cpp  std_partition.cpp  std_remove_if.cpp  std_replace_if.cpp  std_transform.cpp  std_unique.cpp
